--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -147,6 +147,7 @@ en:
         underqualified: The candidate didn't have the required skills or level of
           experience needed.
         workload: The candidate's availability didn't match with position requirements.
+    disqualify: Disqualify
     download_file: download file
     emails: Emails
     full_name: Full name
