feat!(ui): tabler ui kit instead of bootstrap (#1)
* changes from previous PR

* missed `$toughbyte-black` color

* update id in test

* fix(tabler): Icon/IconButton/Button with icon styles adapted for a tabler (#3)

* icon sizes as number -> icon sizes as css

* remove `empty-avatar-icon` css class

* reassign button migration to button component

* stroke-width: 1.25 as default for the `.icon` class

* pipeline buttons correct size

* fix position_html_status_circle

* rubocoped

* temporary back size assignment for button component slots

* fix(ui): tabler line height for body set to 1.5 (#32)

* fix(ui): tabler icons after testing (#62)

* notes chevron

* tables/accordions icon scaling

* correct color for draft position icon

* blacklisted candidate name with icon

* copy to clipboard popover button size fixed

* card empty text with icon centered

* large icon size for positions header

* redundant space

* fix(ui): use white background color for tabler accordions (#75)

* fix(ui): all avatars use `avatar` class and correct sizes (#42)

* avatars update everywhere

* fix avataroverlay

* feat(ui): new cancel button style (#77)

* new cancel button styles

* confirmations modal

* Updated color and padding for ats interface (#86)

* fix(ui): pipeline styles adapted to a tabler (#83)

* badges

* pipeline columns

* desktop pipeline navigation

* pipeline placements navigation

finalized desktop and mobile

* fix(style): Returned .text-input-component-disabled style (#85)

* fix(style): Changed footer text style (#93)

* Changed footer text style

* fix: colors on main block

* Restored selectize colors

* fix(ui): adapt navbar (#98)

* Fix tasks counter badge style

* Set spacing between elements

* Fixed jumping navbar when toggle dropdown on mobile display

* Fixed highlighting active nav in desktop

* Applied highlighting active nav in mobile

* Added color for div

--- a/config/locales/career_site.en.yml
+++ b/config/locales/career_site.en.yml
@@ -4,6 +4,7 @@ en:
     positions:
       all_positions: All positions at %{company_name}
       apply_button: Apply
+      apply_position: Apply for this position
       closed_alert: This position is no longer active.
       description: Description
       open_positions_header: Open positions at %{company_name}
