feat: new admin settings profile page (step 1 of admin interface) (#259)
Co-authored-by: wrmk <elmakan@gmail.com>

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -244,6 +244,36 @@ en:
   scorecard_templates:
     add: Add scorecard template
 
+  settings:
+    company:
+      career_site: Career site
+      company: Company
+      general: General
+    person:
+      profile:
+        full_name_input_label: Full name
+        personal: Personal
+        remove_avatar:
+          successfully_removed: Account avatar successfully removed.
+        show:
+          change_password_link_text: Change password
+          email_input_label: Email
+          email_linked: Linked
+          email_not_linked: Link email
+          name_placeholder: Enter full name
+          save_form_button: Save
+          tab_title: Settings - Personal - Profile
+          title: Profile
+        update_account:
+          successfully_updated: Account successfully updated.
+        update_avatar:
+          successfully_updated: Account avatar successfully updated.
+    recruitment:
+      disqualify_reasons: Disqualify reasons
+      email_templates: Email templates
+      recruitment: Recruitment
+      sources: Sources
+
   tasks:
     add_task_button: Add task
     assignee_not_found: Assignee has not been found.
@@ -283,21 +313,6 @@ en:
     not_found: Account not found
     reinvite: Reinvite
     reactivate: Reactivate
-    settings:
-      show:
-        change_password_link_text: Change password
-        email_input_label: Email
-        email_linked: Linked
-        email_not_linked: Link email
-        save_form_button: Save
-        title: Settings
-      full_name_input_label: Full name
-      update_account:
-        successfully_updated: Account successfully updated.
-      update_avatar:
-        successfully_updated: Account avatar successfully updated.
-      remove_avatar:
-        successfully_removed: Account avatar successfully removed.
     status: Account status
     successfully_updated: "%{name} status was successfully changed to %{new_access_level}."
     successfully_deactivated: "%{name} status was successfully changed to inactive."
