feat(core): add logic to compose and send email (#263)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -135,6 +135,13 @@ en:
       reason_not_found: Disqualification reason has not been found.
     disqualify: Disqualify
     download_file: download file
+    email_compose:
+      button_tooltip:
+        no_emails: Candidate doesn't have emails
+        compose_form_opened: Please make sure you send the previous email before opening a new one
+      email_sent_success_notice: Your email to %{email_addresses} has been sent.
+      email_sent_fail_alert: There was an issue sending your email to %{email_addresses}.
+      unsaved_changes_warning: You have unsaved changes. If you leave this page, you will lose those changes.
     emails: Emails
     file_already_present_warning: The file has not been uploaded, since another one with the same content already exists.
     full_name: Full name
