feat: Add general page in settings (#270)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -255,7 +255,14 @@ en:
     company:
       career_site: Career site
       company: Company
-      general: General
+      general:
+        show:
+          full_name_input_label: Company name
+          name_placeholder: Enter company name
+          tab_title: Settings - Company - General
+        title: General
+        update:
+          successfully_updated: All changes have been saved.
     person:
       profile:
         full_name_input_label: Full name
