feat(settings): add email templates settings page (#277)
Co-authored-by: Liamshin Ilia <lyamsh@yandex.kz>

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -284,7 +284,29 @@ en:
           successfully_updated: Account avatar successfully updated.
     recruitment:
       disqualify_reasons: Disqualify reasons
-      email_templates: Email templates
+      email_templates:
+        edit:
+          message_label: Message
+          message_placeholder: Enter email message
+          name_label: Template name
+          name_placeholder: Enter template name
+          placeholders_label: Placeholders
+          placeholders_tooltip: Placeholders are used to add specific information to your emails without the need for manual input.
+          placeholders_variables:
+            first_name: first name of the recipient
+            full_name: full name of the recipient
+            sender_first_name: first name of the person sending the email
+            sender_full_name: full name of the person sending the email
+            company: your company name
+            position: position name of the most recent assigned position where candidate is qualified
+          subject_label: Subject
+          subject_placeholder: Enter email subject
+          tab_title: Settings - Recruitment - Edit email template - Edit
+          title: Edit email template
+        index:
+          add_template: Add email template
+          tab_title: Settings - Recruitment - Email templates
+          title: Email templates
       recruitment: Recruitment
       sources: Sources
 
