feat: implementation of sources page on Admin Interface (#273)
Co-authored-by: wrmk <elmakan@gmail.com>

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -261,8 +261,6 @@ en:
           name_placeholder: Enter company name
           tab_title: Settings - Company - General
         title: General
-        update:
-          successfully_updated: All changes have been saved.
     person:
       profile:
         full_name_input_label: Full name
@@ -308,7 +306,14 @@ en:
           tab_title: Settings - Recruitment - Email templates
           title: Email templates
       recruitment: Recruitment
-      sources: Sources
+      sources:
+        show:
+          name_placeholder: Source
+          tab_title: Settings - Recruitment - Sources
+          title: Sources
+        update_all:
+          linkedin_error: LinkedIn source cannot be changed.
+    successfully_saved_notice: All changes have been saved.
 
   tasks:
     add_task_button: Add task
