feat(core): add logic to save and update email template (#294)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -303,6 +303,7 @@ en:
           add_template: Add email template
           tab_title: Settings - Recruitment - Email templates
           title: Email templates
+        name_already_taken_alert: Email template with this name already exists.
       recruitment: Recruitment
       sources:
         show:
